--- a/pom.xml
+++ b/pom.xml
@@ -48,10 +48,14 @@
         <gson.ver>2.8.0</gson.ver>
         <!--jackson-->
         <jackson.ver>2.6.7</jackson.ver>
-        <!--jackson-->
+        <!--commons-fileupload-->
         <commons-fileupload.ver>1.3.1</commons-fileupload.ver>
-        <!--jackson-->
+        <!--commons-io-->
         <commons-io.ver>2.4</commons-io.ver>
+        <!--jbpm-->
+        <activiti.ver>6.0.0</activiti.ver>
+        <!--jbpm-->
+        <h2database.ver>1.4.193</h2database.ver>
     </properties>
     
     <dependencies>
@@ -163,6 +167,16 @@
             <artifactId>commons-fileupload</artifactId>
             <version>${commons-fileupload.ver}</version>
         </dependency>
+        <dependency>
+  		<groupId>org.activiti</groupId>
+  		<artifactId>activiti-engine</artifactId>
+  		<version>${activiti.ver}</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>com.h2database</groupId>
+  		<artifactId>h2</artifactId>
+  		<version>${h2database.ver}</version>
+  	</dependency>
     </dependencies>
 
     <repositories>
