--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,7 +1,7 @@
 # Copyright 2017 BangChen Information Technology Ltd., Co.
 # Licensed under the Apache License 2.0.
 
-log4j.rootLogger=info, stdout, ServerDailyRollingFile
+log4j.rootLogger=info, stdout, ServerDailyRollingFile, ACT
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
@@ -13,3 +13,7 @@ log4j.appender.ServerDailyRollingFile.File=server_daily.log
 log4j.appender.ServerDailyRollingFile.layout=org.apache.log4j.PatternLayout
 log4j.appender.ServerDailyRollingFile.layout.ConversionPattern=%d - %m%n
 log4j.appender.ServerDailyRollingFile.Append=true
+
+log4j.appender.ACT=org.apache.log4j.ConsoleAppender
+log4j.appender.ACT.layout=org.apache.log4j.PatternLayout
+log4j.appender.ACT.layout.ConversionPattern= %d{hh:mm:ss,SSS} [%t] %-5p %c %x - %m%n
